--- a/auth/application-dev.yml
+++ b/auth/application-dev.yml
@@ -1,8 +1,9 @@
 server:
-  port: 9090
-spring:
-  application:
-    name: auth-service
+  port: 8100
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
 management:
   endpoints:
     web:
